fix(scoreboard): correct sponsor display transformation for SponsorLine component
- Change logoSrc to return empty string instead of null for consistent typing
- Add mainSponsorLine computed to transform sponsor data to line format
- Update SponsorLine component binding to use line input instead of sponsor
- Remove non-null assertion since logoSrc now returns string type

--- a/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.html
+++ b/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.html
@@ -1,17 +1,17 @@
-@if (hasContent()) {
-  <div class="sponsor-display-flat">
-    @if (logoSrc()) {
-      <img
-        [ngSrc]="logoSrc()!"
-        width="220"
-        height="70"
-        [style.transform]="'scale(' + logoScale() + ')'"
-        [attr.alt]="displayTitle() || 'Sponsor logo'"
-      />
-    }
+    @if (hasContent()) {
+   <div class="sponsor-display-flat">
+     @if (logoSrc()) {
+       <img
+         [ngSrc]="logoSrc()"
+         width="220"
+         height="70"
+         [style.transform]="'scale(' + logoScale() + ')'"
+         [attr.alt]="displayTitle() || 'Sponsor logo'"
+       />
+     }
 
-    @if (displayTitle()) {
-      <span class="sponsor-title">{{ displayTitle() }}</span>
-    }
-  </div>
-}
+     @if (displayTitle()) {
+       <span class="sponsor-title">{{ displayTitle() }}</span>
+     }
+   </div>
+   }
