--- a/src/app/features/scoreboard/components/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/features/scoreboard/components/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -19,6 +19,10 @@
 }
 
 // Current Values Display (similar to score-display in score-forms)
+.current-values-wrapper {
+  width: 100%;
+}
+
 .current-values {
   display: flex;
   justify-content: center;
